--- a/assets/ajax/home.html
+++ b/assets/ajax/home.html
@@ -1,7 +1,26 @@
-	<div class='nav span12'>
-		<ul>
-		<li>A</li>	
-		<li>B</li>
-		<li class='username'></li>
+	<div class='nav title'>
+		<ul class='left'>
+		<li><a title='Athlete Tracker'>AT</a></li>
+		<div class='out'>
+		<li><i title='Sign out' class="out fa fa-sign-out"></i></li>
+		</div>
 		</ul>
 	</div>
+	<div class='nav'>
+		<ul class='left'>
+		<li class='homepage'><a><i class="fa fa-home"></i></a></li>
+		<li class='flagpage'><a><i class="fa fa-flag"></i></a></li>
+		<li><a>B</a></li>
+		<li><a>C</a></li>
+		</ul>
+	</div>
+
+<div class='content'>
+	<div class='flags'>
+		<div class='grid'>
+
+		</div>
+	</div>
+</div>	
+
+<script src='./assets/js/ajax.js' type='text/javascript'></script>
