--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="Michael McFadyen">
 
+    <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
     <LINK href='./assets/css/mycss.css' rel='stylesheet' type='text/css'>
     <LINK href='./assets/css/navCSS.css' rel='stylesheet' type='text/css'>
     <LINK href='./assets/css/simplegrid.css' rel='stylesheet' type='text/css'>
@@ -14,20 +15,9 @@
     <link href="http://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet" type="text/css">
 </head>
 <body>
-	<div class='nav'>
-		<ul>
-		<li class='flagpage'><a>Flags</a></li>
-		<li><a>B</a></li>
-		<li><a>C</a></li>
-		<li><a>D</a></li>
-		</ul>
-	</div>
 
-	<div class='content'>
-
-	</div>
 </body>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script src='./assets/js/index.js' type='text/javascript'></script>
-<script src='./assets/js/ajax.js' type='text/javascript'></script>
+<script src='./assets/js/onLoad.js' type='text/javascript'></script>
 </html>
