possible glyph fix

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="Michael McFadyen">
 
-    <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+    <link rel="stylesheet" href="./assets/font-awesome-4.0.3/css/font-awesome.min.css">
     <LINK href='./assets/css/mycss.css' rel='stylesheet' type='text/css'>
     <LINK href='./assets/css/navCSS.css' rel='stylesheet' type='text/css'>
     <LINK href='./assets/css/simplegrid.css' rel='stylesheet' type='text/css'>
