--- a/assets/ajax/login.html
+++ b/assets/ajax/login.html
@@ -1,8 +1,8 @@
 <div class='center grid'>
-		<div class='header col-1-1'>
+		<div class='header'>
 			Athlete<br>Tracker
 		</div>
-		<div class='login col-1-1'>
+		<div class='login'>
 			<hr />
 			<a class='entrytext log'>Login</a>
 			<form class='signin centrealign hide'>
@@ -16,7 +16,7 @@
 			<hr />
 		</div>
 
-		<div class='signup centrealign col-1-1'>
+		<div class='signup centrealign'>
 			<a class='entrytext sign'>Sign Up</a>
 			<form class='signupform centrealign hide'>
 				<p>Enter a Username</p>
