--- a/assets/ajax/home.html
+++ b/assets/ajax/home.html
@@ -10,17 +10,24 @@
 		<ul class='left'>
 		<li class='homepage'><a><i class="fa fa-home"></i></a></li>
 		<li class='flagpage'><a><i class="fa fa-flag"></i></a></li>
-		<li><a>B</a></li>
+		<li class='chart'><a><i class="fa fa-bar-chart-o"></i></a></li>
 		<li><a>C</a></li>
 		</ul>
 	</div>
 
-<div class='content'>
+<div class='content  grid'>
 	<div class='flags'>
 		<div class='grid'>
+			<div class='sidebar'>
+		
+			</div>
+			<div class='mainbar'>
+
+			</div>
 
 		</div>
 	</div>
 </div>	
 
+<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 <script src='./assets/js/ajax.js' type='text/javascript'></script>
