--- a/index.html
+++ b/index.html
@@ -20,4 +20,5 @@
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script src='./assets/js/index.js' type='text/javascript'></script>
 <script src='./assets/js/onLoad.js' type='text/javascript'></script>
+<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 </html>
